log
Thu 16 May 2024 09:42:29 PM UTC: 
 tests:  0|5
total_score: 0/70
41788b7
Thu 16 May 2024 09:56:18 PM UTC: 
 sudoku.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
e6b16da
Thu 16 May 2024 09:57:46 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:65:31: error: iteration 8 invokes undefined behavior [-Werror=aggressive-loop-optimizations]
   65 |                 n->sudo[j][k] = k;
      |                 ~~~~~~~~~~~~~~^~~
sudoku.c:63:30: note: within this loop
   63 |             for(int k = 1; k <= 9; k++)
      |                            ~~^~~~
cc1: all warnings being treated as errors
Compilation failed
357c14b
Thu 16 May 2024 09:58:12 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
414c382
Thu 16 May 2024 09:59:14 PM UTC: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
75ad3b1
Thu 16 May 2024 10:00:07 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
d493cf9
Thu 16 May 2024 10:01:30 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
263f476
